[metadata]
name = dice-mc
version = 0.1.0
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/dice-mc
description = DiCE: The Infinitely Differentiable Monte-Carlo Estimator
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
install_requires =
    torch
